src/index.css
/* braah-one-regular - latin */
@font-face {
  font-display: swap;
  font-family: "Braah One";
  font-style: normal;
  font-weight: 400;
  src: url("/fonts/braah-one-v6-latin-regular.woff2") format("woff2");
}
/* big-shoulders-inline-text-regular - latin */
@font-face {
  font-display: swap;
  font-family: "Big Shoulders Inline Display";
  font-style: normal;
  font-weight: 400;
  src: url("/fonts/big-shoulders-inline-display-v27-latin-regular.woff2")
    format("woff2");
}
/* big-shoulders-inline-text-500 - latin */
@font-face {
  font-display: swap;
  font-family: "Big Shoulders Inline Display";
  font-style: normal;
  font-weight: 500;
  src: url("/fonts/big-shoulders-inline-display-v27-latin-500.woff2")
    format("woff2");
}
/* abeezee-regular - latin */
@font-face {
  font-display: swap;
  font-family: "ABeeZee";
  font-style: normal;
  font-weight: 400;
  src: url("/fonts/abeezee-v22-latin-regular.woff2") format("woff2");
}

:root {
  --white: #fff;
  --orange: #ff451c;
  --orange-transp: rgba(255, 69, 28, 0.2);
  --beige: #fdf7ec;
  --blue: #070f5d;
}

body {
  margin: 0;
  overflow-x: hidden;
  background-color: var(--beige);
  font-family: "Braah One", sans-serif, Arial, Helvetica;
}

#root {
  min-height: 100vh;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
}

.wrapper {
  flex: 1;
  margin-top: 8.8rem;
}

header {
  height: 8.8rem;
  width: 100%;
  position: fixed;
  top: 0;
  background-color: var(--beige);
  border-bottom: 0.125rem solid var(--beige);
  z-index: 500;
  transition: border-bottom 0.5s;
}

header.scrolled {
  border-bottom: 0.125rem solid var(--orange);
}

header > nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 100%;
  padding: 0rem 2.5rem;
}

nav > button {
  height: 2rem;
  border: none;
  background: none;
  padding: 0;
  margin: 0;
  cursor: pointer;
}

nav > button img {
  height: 100%;
}

.carrot-logo {
  height: 7.5rem;
  transform: rotate(-40deg);
}

.cover-section {
  min-height: calc(100vh - 8.8rem);
  display: flex;
  justify-content: center;
  align-items: center;
}

.cover-section h1 {
  font-size: 11.25rem;
  letter-spacing: -0.25rem;
  color: var(--orange);
  font-family: "Big Shoulders Inline Display";
  font-weight: 500;
  text-align: center;
  margin: 0 1.5rem 4.4rem 1.5rem;
}

.cover-section img {
  position: absolute;
  bottom: 1.5rem;
  animation: move 0.5s infinite alternate ease-in-out;
  transition: all 1s ease-in-out;
}

.cover-section img.scrolled {
  opacity: 0;
  visibility: hidden;
}

@keyframes move {
  0% {
    transform: translateY(0.75rem);
  }
  100% {
    transform: translateY(0rem);
  }
}

.about-me-section {
  display: flex;
  justify-content: space-between;
  height: calc(100% - 8.8rem);
  max-height: calc(100vw / 1.78);
}

.img-about-container {
  width: 45%;
}

.img-about-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.text-about-container {
  width: 60%;
  position: relative;
}

.text-about-container img {
  width: 128%;
  position: absolute;
  z-index: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.text-about-container > div {
  position: absolute;
  width: 80%;
  max-width: 40rem;
  z-index: 100;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: var(--white);
}

.text-about-container h2 {
  font-size: 3rem;
}
.text-about-container p {
  font-size: 1.75rem;
}

.latest-recipes-section {
  margin: 8.75rem 4.7rem;
}

.latest-recipes-top-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.latest-recipes-top-container h2 {
  font-size: 6.25rem;
  color: var(--orange);
  font-family: "Big Shoulders Inline Display";
  font-weight: 400;
  margin: 0;
}

.latest-recipes-top-container button {
  border: none;
  background: none;
  padding: 0;
  margin: 0rem 0.6rem;
}

.latest-recipes-top-container button > img {
  cursor: pointer;
  height: 3.125rem;
}

.recipes-thumbnail-container {
  padding-top: 3rem;
  display: flex;
  gap: 7.5rem;
  scroll-behavior: smooth;
  color: var(--blue);
  font-size: 1.5rem;
  text-align: center;
  margin: 0rem -4.7rem;
  overflow-x: auto;
  overflow-y: hidden;
  scrollbar-width: 2rem;
  padding-bottom: 2rem;
}

.recipes-thumbnail-container::-webkit-scrollbar {
  height: 0.5rem;
  border-radius: 100%;
  scrollbar-color: var(--orange);
}

.recipes-thumbnail-container::-webkit-scrollbar-track {
  background-color: var(--orange-transp);
  border-radius: 1rem;
  margin: 0 4.7rem;
}

.recipes-thumbnail-container::-webkit-scrollbar-thumb {
  background-color: var(--orange);
  border-radius: 1rem;
}

.recipes-thumbnail-container > div:first-child {
  margin-left: 4.7rem;
}
.recipes-thumbnail-container > div:last-child {
  margin-right: 4.7rem;
}

.recipes-thumbnail-container > div {
  position: relative;
}

.recipes-thumbnail-container img {
  height: 22.75rem;
  width: 20rem;
  object-fit: cover;
  border-radius: 1.6rem;
}

.recipes-thumbnail-container h3 {
  margin: 1rem 0.25rem;
}

.recipes-thumbnail-container a {
  text-decoration: none;
  color: var(--blue);
}

.latest-recipes-tag {
  z-index: 100;
  background-color: var(--orange);
  position: absolute;
  padding: 0.375rem 1.625rem;
  border-radius: 0.3125rem;
  top: -5%;
  right: -10%;
}

.sign-section {
  margin: 8.75rem 0rem;
  display: flex;
  overflow: hidden;
  user-select: none;
}

.sign-section h2 {
  font-size: 6.875rem;
  color: var(--blue);
  margin: 0;
  white-space: nowrap;
  overflow: hidden;

  flex-shrink: 0;
  min-width: 100%;
  animation: scroll 20s linear infinite;
}

@keyframes scroll {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

.browse-section {
  position: relative;
  height: 100vh;
  /* height: calc(100vh - 8.8rem); */
  max-height: 50rem;
  /* max-height: calc(100vw / 1.8); */
  margin-bottom: 8.75rem;
}
/* ... */

